ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: excercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
